--- a/css/styles.css
+++ b/css/styles.css
@@ -562,7 +562,7 @@ body {
     letter-spacing: 0.04em;
     padding-left: 16px;
     margin-right: 24px;
-    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
     border-radius: 4px;
     color: #ffffff;
 }
@@ -628,8 +628,8 @@ body {
     padding: 72px 24px 24px 24px;
     transform: translate(-50%, -50%) scale(1);
     width: 408px;
-    min-height: 576px;
-    background: #ffffff;
+    min-height: 584px;
+    background: #fcfcfc;
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
     0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 4px;
@@ -641,6 +641,9 @@ body {
 }
 
 .modal-close-btn {
+    position: absolute;
+    top: 24px;
+    right: 24px;
     width: 24px;
     height: 24px;
     border-radius: 50%;
@@ -652,7 +655,7 @@ body {
     margin-left: auto;
     padding: 0;
     cursor: pointer;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
     margin-bottom: 24px;
 }
 
